# forge-loop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: minimal-fake-config.json  openptxas-config.json
forge_loop/: __init__.py  cli.py  config.py  cycle.py  db.py  dispatch.py  prompts.py  sources.py  verify.py
tests/: test_forge_loop.py
