[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-loop"
version = "0.1.0"
description = "Autonomous LLM-driven differential-compiler-improvement loop"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Garrick Wagner", email = "garrick.wagner@gmail.com"}]
keywords = [
    "llm",
    "agent",
    "claude",
    "autonomous",
    "compiler",
    "differential-testing",
    "ci",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
forge-loop = "forge_loop.cli:main"

[project.urls]
Homepage = "https://github.com/garrick247/forge-loop"
Issues = "https://github.com/garrick247/forge-loop/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge_loop*"]
exclude = ["tests*", "examples*"]
